# pgtrgm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
src/: lib.rs  prelude.rs
src/diesel/: array_expression_methods.rs  dsl.rs  expression_methods.rs  functions.rs  helper_functions.rs  mod.rs  operators.rs  prelude.rs
src/sqlx/: constants.rs  helpers.rs  index.rs  mod.rs
