# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "pgtrgm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

description = "PostgreSQL pg_trgm extension support for Diesel and SQLx"
readme = "README.md"
keywords = ["diesel", "sqlx", "postgres", "trigram", "pg_trgm"]
categories = ["database"]

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/martsokha/pgtrgm"
homepage = "https://github.com/martsokha/pgtrgm"
documentation = "https://docs.rs/pgtrgm"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

## Enable Diesel ORM support with operators and SQL functions
diesel = ["dep:diesel"]

## Enable SQLx support with SQL constants and helper functions
sqlx = ["dep:sqlx"]

[dependencies]
diesel = { version = "2.2", features = ["postgres"], optional = true }
sqlx = { version = "0.8", features = ["postgres"], optional = true }
